2007-12-23  Neal H. Walfield  <neal@gnu.org>

	* l4/compat/kip.h (L4_ApiVersion): Cast result of
	_L4_kernel_interface to elide gcc warning.
	(L4_ApiFlags): Likewise.
	(L4_KernelId): Likewise.

2007-12-13  Neal H. Walfield  <neal@gnu.org>

	* l4/pagefault.h (_L4_pagefault_reply_formulate_in): New function.
	(_L4_pagefault_reply_formulate): Reimplement in terms of this new
	function.
	* l4/gnu/pagefault.h (l4_pagefault_reply_formulate_in): New
	function.
	
2007-12-13  Neal H. Walfield  <neal@gnu.org>

	* l4/ipc.h (_L4_msg_put): Correctly advance ANY_TYPED.
	(_L4_msg_get): Likewise.

2007-12-08  Neal H. Walfield  <neal@gnu.org>

	* ia32/l4/bits/vregs.h (_L4_utcb_base): New function.

2007-11-16  Neal H. Walfield  <neal@gnu.org>

	* l4/thread-start.h (_L4_thread_start): Don't send, reply.

2007-10-26  Neal H. Walfield  <neal@gnu.org>

	* l4/math.h (_L4_msb64): New function.
	(_L4_lsb64): Likewise.
	* l4/gnu/math.h (l4_msb64): Likewise.
	(l4_lsb64): Likewise.

2007-10-16  Neal H. Walfield  <neal@gnu.org>

	* l4/gnu/ipc.h (l4_set_msg_msg_tag): Rename from this...
	(l4_msg_set_msg_tag): ... to this.
	(l4_msg_set_untyped_words): New function.
	(l4_msg_set_typed_words): Likewise.
	(l4_msg_set_words): Likewise.

2007-08-05  Neal H. Walfield  <neal@gnu.org>

	* l4/pagefault.h (_L4_pagefault_reply_formulate): New function.
	(_L4_pagefault_reply): Refactor code into the above new function
	and use it.
	* l4/gnu/pagefault.h (l4_pagefault_reply): New function.

2007-07-27  Neal H. Walfield  <neal@gnu.org>

	* l4/abi.h: New file.
	* v2/Makefile.am: New file.
	* v2/ia32/Makefile.am: New file.
	* v2/ia32/l4/abi/bits/kip.h: New file.
	* v2/l4/abi/abi.h: New file.
	* v2/l4/abi/kip.h: New file.
	* x2/Makefile.am: New file.
	* x2/l4/abi/abi.h: New file.
	* x2/l4/abi/kip.h: New file.
	* headers.m4: Configure a link from libl4/l4/abi.h to
	include/l4/abi.h, libl4/${l4_abi}/l4/abi/kip.h to
	include/l4/abi/kip.h, libl4/${l4_abi}/l4/abi/abi.h to